Fix title banner too tall on IOS

--- a/src/css/TitleBanner.css
+++ b/src/css/TitleBanner.css
@@ -41,17 +41,18 @@
     min-width: 100%;
     z-index: 20;
     left: 50%;
-    transform: translateY(-100%) translateX(-50%);
+    bottom: 0px;
+    transform: translateX(-50%);
 }
 
 .title-banner .dunes div {
     position: absolute;
+    bottom: 0px;
     width: 100%;
     height: 100%;
 }
 
 .title-banner .dunes .layer-1 {
-    top: 0px;
     z-index: 20;
 }
 
@@ -61,7 +62,6 @@
 
 .title-banner .dunes .layer-2 {
     z-index: 19;
-    top: 0px;
 }
 
 .title-banner .dunes .layer-2 .dune {
@@ -71,7 +71,6 @@
 
 .title-banner .dunes .layer-3 {
     z-index: 18;
-    top: 0x;
 }
 
 .title-banner .dunes .layer-3 .dune {
@@ -81,7 +80,6 @@
 
 .title-banner .dunes .layer-4 {
     z-index: 17;
-    top: 0x;
 }
 
 .title-banner .dunes .layer-4 .dune {
@@ -156,6 +154,10 @@
 
 
 @media (max-width: 800px) {
+    .title-banner {
+        height: 80vh;
+    }
+
     .title-banner .sign {
         transform: scale(0.5) rotateZ(25deg) translateX(50%);
         right: 1%;
